metadata/root/main/default/objects/SBQQ__PriceRule__c/fields/Price_Action__c.field-meta.xml
<CustomField>
    <fullName>Price_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Action</label>
    <referenceTo>SBQQ__PriceAction__c</referenceTo>
    <relationshipLabel>Price Rules</relationshipLabel>
    <relationshipName>Price_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>