metadata/root/main/default/objects/SBQQ__PriceRule__c/fields/Priceruleautonumber__c.field-meta.xml
<CustomField>
    <fullName>Priceruleautonumber__c</fullName>
    <label>Priceruleautonumber</label>
    <type>AutoNumber</type>
</CustomField>