metadata/root/main/default/objects/SBQQ__PriceRule__c/validationRules/pricerulevalidationrule.validationRule-meta.xml
<ValidationRule>
    <fullName>pricerulevalidationrule</fullName>
    <active>true</active>
    <errorConditionFormula>Name = &apos;test&apos;</errorConditionFormula>
    <errorMessage>gsfgdf</errorMessage>
</ValidationRule>