metadata/root/main/default/objects/SBQQ__PriceRule__c/validationRules/Pricevalidation.validationRule-meta.xml
<ValidationRule>
    <fullName>Pricevalidation</fullName>
    <active>true</active>
    <errorConditionFormula>SBQQ__Product__c = &apos;Test&apos;</errorConditionFormula>
    <errorMessage>Tested error</errorMessage>
</ValidationRule>